<resources>
    <string name="app_name">PandaSushi</string>


    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_categories">Categories</string>
    <string name="title_activity_settings">Settings</string>
    <string name="home">Acasa</string>
    <string name="settings">Setari</string>
    <string name="aboutus">Despre Noi</string>
    <string name="addtocart">Adauga in cos</string>
    <string name="addedtocart">Deja in cos</string>
    <string name="delivery">Livrare</string>
    <string name="pickup">Ridica singur</string>
    <string name="cancel">Anuleaza</string>
    <string name="placeorder">Plaseaza comanda</string>
    <string name="thankyou">Vă mulțumim pentru comandă</string>
    <string name="contactsoon">Veți fi contactat în curînd</string>
    <string name="save">Salvează</string>
    <string name="google_maps_key">AIzaSyC_Wt6K1Sxp2j2bRJM1dK63dj9UB3UpPcY</string>
    <string name="title_activity_maps">Map</string>
    //DISHES

    <string name="avocadomaki">Avocado Maki</string>
    <string name="ebimaki">Ebi Maki</string>
    <string name="kapamaki">Kapa Maki</string>
    <string name="philadelphiamaki">Philadelphia Maki</string>
    <string name="sakemaki">Maki Somon</string>
    <string name="sakesmokedmaki">Maki Somon Sarat</string>
    <string name="tunamaki">Tuna Maki</string>
    <string name="unaghimaki">Unghi Maki</string>
    <string name="cascavalcrevetemaki">Maki Cascaval Crevete</string>
    <string name="philadelphiaclasic">Philadelphia Classic</string>
    <string name="philadelphialight">Philadelphia Light</string>
    <string name="philadelphiacutipar">Philadelphia Cu Tipar</string>
    <string name="philadelphiadelux">Philadelphia De Lux</string>
    <string name="philadelphiaunaghi">Philadelphia Unaghi</string>
    <string name="philadelphiainsusan">Philadelphia In Susan</string>
    <string name="philadelphiaorange">Philadelphia Orange</string>
    <string name="philadelphiagrapes">Philadelphia Grapes</string>
    <string name="canada">Canada</string>
    <string name="californiacusomon">California Cu Somon</string>
    <string name="californiaebi">California Ebi</string>
    <string name="californiacani">California Cani</string>
    <string name="californiacutipar">California Cu Tipar</string>
    <string name="rollebiten">Roll Ebi Ten</string>
    <string name="rollballi">Roll Balli</string>
    <string name="greendragon">Green Dragon</string>
    <string name="rollbbq">Roll BBQ</string>
    <string name="rollsamuray">Roll Samuray</string>
    <string name="sakegurme">Sake Gurme</string>
    <string name="rolltuna">Roll Tuna</string>
    <string name="amigaseake">Amigaseake</string>
    <string name="capitanroll">Capitan Roll</string>
    <string name="newyorkcusomon">New York Cu Somon</string>
    <string name="newroll">New Roll</string>
    <string name="newyorkcutipar">New York Cu Tipar</string>
    <string name="minirollcrevetecascaval">MiniRoll Crevete Cascaval</string>
    <string name="minirollcreveteton">MiniRoll Crevete Ton</string>
    <string name="minirollsomonputinsarat">MiniRoll Somon Putin Sarat</string>
    <string name="nighirisomon">Nighiri Somon</string>
    <string name="nighirisomonputinsarat">Nighiri Somon Putin Sarat</string>
    <string name="nighiriton">Nighiri Ton</string>
    <string name="nighiricreveta">Nighiri Creveta</string>
    <string name="nighiritipar">Nighiri Tipar</string>
    <string name="gukancreveta">Gunkan Creveta</string>
    <string name="gukansomon">Gunkan Somon</string>
    <string name="gukanton">Gunkan Ton</string>
    <string name="gukancaviar">Gunkan Caviar</string>
    <string name="gukandelux">Gunkan De Lux</string>
    <string name="gukancusomongrill">Gunkan Cu Somon Grill</string>
    <string name="gukanwakame">Gunkan Wakame</string>
    <string name="gukantobiko">Gunkan Tobiko</string>
    <string name="gukantipar">Gunkan Tipar</string>
    <string name="setphiladelphia">Set Philadelphia</string>
    <string name="setdelux">Set De Lux</string>
    <string name="setcalifornia">Set California</string>
    <string name="setsalmon">Set Salmon</string>
    <string name="kingset">King Set</string>
    <string name="setprincess">Set Princess</string>
    <string name="makiset">Maki Set</string>
    <string name="setsegun">Set Segun</string>
    <string name="gukanset">Gunkan Set</string>
    <string name="salatawakame">Salata Wakame</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
