<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mariu.myapplication.pickupActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thankyou"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/text1ty"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactsoon"
        android:layout_below="@+id/text1ty"
        android:layout_centerHorizontal="true"
        />


    <Button
        android:id="@+id/gohomebtn"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:text="@string/home"

    android:layout_alignParentBottom="true"
    />

</RelativeLayout>
