<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <RadioButton
        android:id="@+id/rd_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pickup" />

    <RadioButton
        android:id="@+id/rd_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rd_1"
        android:text="@string/delivery"
        android:checked="true"

        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_below="@+id/rd_2">
    <Button
        android:id="@+id/dialogCancel"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/cancel"

        />
    <Button
        android:id="@+id/dialogOk"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="OK"

        />
</LinearLayout>
</RelativeLayout>